--- a/requirements.txt
+++ b/requirements.txt
@@ -1,94 +1,31 @@
-absl-py
-accelerate
-aiohappyeyeballs
-aiohttp
-aiosignal
-annotated-types
-axial_positional_embedding
-CoLT5-attention
-datasets
-dill
-frozenlist
-fsspec
-gluonts
-grpcio
-hf-xet
-hf_transfer
-huggingface-hub
-hyper-connections
-ipywidgets
-jupyterlab_widgets
-lightning
-lightning-utilities
-line_profiler
-llvmlite
-local-attention
-Markdown
-markdown-it-py
-matplotlib
-mdurl
-multidict
-multiprocess
-munkres
-numba
-numpy
-nvidia-cublas-cu12
-nvidia-cuda-cupti-cu12
-nvidia-cuda-nvrtc-cu12
-nvidia-cuda-runtime-cu12
-nvidia-cudnn-cu12
-nvidia-cufft-cu12
-nvidia-cufile-cu12
-nvidia-curand-cu12
-nvidia-cusolver-cu12
-nvidia-cusparse-cu12
-nvidia-cusparselt-cu12
-nvidia-nccl-cu12
-nvidia-nvjitlink-cu12
-nvidia-nvtx-cu12
-opencv-python
-patool
-peft
-product_key_memory
-propcache
-protobuf
-pyarrow
-pydantic
-pydantic_core
-pynndescent
-PySide6
-pyte
-pytorch-lightning
-PyWavelets
-reformer-pytorch
-regex
-rich
-scikit-base
-sentencepiece
-setuptools
-shiboken6
-sktime
-speedtest-cli
-sympy
-tensorboard
-tensorboard-data-server
-termcolor
-thop
-tokenizers
-toolz
-torch
-torch-tb-profiler
-torchaudio
-torchmetrics
-torchstat
-torchvision
-transformers
-triton
-umap-learn
-Werkzeug
-wheel
-widgetsnbextension
-xxhash
-yacs
-yarl
-zstandard
+torch>=2.5.0
+torchvision>=0.20.0
+torchaudio>=2.5.0
+lightning>=2.5.0
+triton>=3.1.0
+transformers>=4.48.0
+datasets>=3.2.0
+peft>=0.14.0
+accelerate>=1.2.0
+tokenizers>=0.21.0
+huggingface-hub>=0.27.0
+gluonts>=0.16.0
+sktime>=0.35.0
+PyWavelets>=1.8.0
+thop>=0.1.1
+torchstat>=0.0.7
+line_profiler>=4.1.0
+torch-tb-profiler>=0.4.3
+numba>=0.61.0
+numpy>=2.1.0
+pyarrow>=18.0.0
+pandas>=2.2.0
+scikit-learn>=1.6.0
+pydantic>=2.10.0
+local-attention>=1.9.0
+reformer-pytorch>=1.4.0
+matplotlib>=3.10.0
+tensorboard>=2.18.0
+rich>=13.9.0
+tqdm>=4.67.0
+timm>=0.9.0
